# claude-migrate

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
claude_migrate/: __init__.py  __main__.py  archive.py  auth.py  bookmark.py  checkpoint.py  cli.py  client.py  config.py  discover.py  errors.py  fetch.py  memory.py  migrate.py  models.py  notify.py  render.py  restore.py  runner.py  scheduler.py  session.py  state.py  store.py  transport.py
scripts/: claude-migrate.service  claude-migrate.timer  com.user.claudemigrate.plist
tests/: conftest.py  test_auth.py  test_bookmark.py  test_cli.py  test_client.py  test_idempotency.py  test_memory.py  test_render.py  test_restore.py  test_restore_workers.py  test_runner.py  test_scheduler.py  test_state.py  test_transport.py
