[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-migrate"
version = "0.2.0"
description = "Migrate or back up a Claude.ai consumer account: chats, projects, custom styles, profile prefs, and (manually) memory."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "claude-migrate contributors" }]
keywords = ["claude", "anthropic", "backup", "migration", "claude-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "curl-cffi>=0.7",
    "keyring>=24",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24",
    "cryptography>=42",
    "tomli-w>=1.0",
]

[project.urls]
# After creating the GitHub repository, replace `your-username` below with your handle.
Homepage = "https://github.com/your-username/claude-migrate"
Repository = "https://github.com/your-username/claude-migrate"
Issues = "https://github.com/your-username/claude-migrate/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-vcr>=1.0",
    "ruff>=0.5",
    "types-requests",
]

[project.scripts]
claude-migrate = "claude_migrate.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["claude_migrate"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data", "tests/cassettes", "tests/fixtures"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "RUF",           # ruff-specific
    "ASYNC",         # async-correctness
    "SIM",           # simplify
    "PT",            # pytest-style
]
ignore = [
    "E501",          # line length handled by formatter
    "B008",          # default-argument-call (click decorators)
    "ASYNC109",      # `timeout` parameter is a meaningful per-request bound
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "PT011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
exclude = ["data/", "tests/cassettes/", "tests/fixtures/"]

[[tool.mypy.overrides]]
module = ["curl_cffi.*", "keyring.*", "structlog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]
